k8s/base/sample-nginx/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-namespace
  labels:
    env: dev
