k8s/base/sample-nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: nginx-namespace
  labels:
    app: nginx
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
