k8s/base/sample-nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: nginx-namespace
  labels:
    app: nginx
spec:
  defaultBackend:
    service: 
      name: nginx-service
      port:
        number: 80
